@@ -2,6 +2,7 @@ FOF 3.1.1
 ================================================================================
 + Controller mixins
 + Model mixins
++ @plural() Blade statement to support JText::plural()
 
 FOF 3.1.0
 ================================================================================
